fixed buttons for pages to be centered on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -1938,9 +1938,18 @@ html, body {
         grid-template-columns: 1fr auto;
     }
 
+    .main-nav.open {
+        max-width: none;
+        width: 100%;
+    }
+
     .nav-list {
-        align-items: center;
+        display: grid;
         gap: 10px;
+        place-items: center;
+        margin: 0;
+        max-width: none;
+        width: 100%;
     }
 
     .nav-list a {
@@ -1949,13 +1958,12 @@ html, body {
         font-size: 1.00rem;
         justify-content: center;
         min-width: 0;
-        padding: 0.65rem 0;
+        padding: 0.65rem;
         width: 100%;
         text-align: center;
     }
 
     .nav-list li {
-        flex: none;
         width: 280px;
         max-width: 90vw;
     }
@@ -2011,6 +2019,7 @@ html, body {
     .nav-list li:first-child a,
     .nav-list li:last-child a {
         border-radius: 12px;
+    
     }
 }
 
